# minesweeper

./: Makefile  README.md  mines.py  pyproject.toml
src/: mines.py
